Actualizar Librerias y Agregar Ejercicios

--- a/Semana01_Introduccion.ipynb
+++ b/Semana01_Introduccion.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBATuJ9RIt0MzmRPp531r3",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOJQt9O+Zwe/AXwFTsm9JSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Google Colab\n",
+        "# Google Colab\n",
         "---\n",
         "Se trata de un entorno de programación en Python en nube que no requiere inestalación.\n",
         "Su estructura gira en torno a celdas de código y texto."
@@ -418,7 +419,7 @@
         },
         "outputId": "96d6af9e-ce09-4d71-832e-76f4da6f83a1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -452,7 +453,43 @@
     {
       "cell_type": "code",
       "source": [
-        "# Creamos una función para calcular el costo de un lote\n",
+        "# Creamos una función para mostrar si una materia prima está homologada\n",
+        "def verificar_homologada(materia_prima):\n",
+        "  if materia_prima['es_homologada']: # Podemos definir la condición así porque esta calve es un booleano\n",
+        "    print(f\"Materia prima: {materia_prima['nombre']} está homologada.\")\n",
+        "  else:\n",
+        "    print(\"Materia prima no homolagada.\")\n",
+        "\n",
+        "\n",
+        "surfactante = {\n",
+        "    'nombre': \"Decil Glucósido\",\n",
+        "    'es_homologada': False # Esta no está homologada\n",
+        "}\n",
+        "# Usamos nuestra función\n",
+        "verificar_homologada(surfactante)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PD-uocddPKrL",
+        "outputId": "acfd1851-1797-4f4d-dff8-ea44421ec7fe"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Materia prima no homolagada.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creamos una función para calcular y retornar el costo de un lote\n",
         "def calcular_costo_lote(cantidad_materia_prima, precio_por_unidad):\n",
         "    costo_total = cantidad_materia_prima * precio_por_unidad\n",
         "    return costo_total  # La función devuelve el valor calculado\n",
@@ -482,7 +519,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# En Colab podemos usar la fucnión desde otra celda,\n",
+        "# En Colab podemos usar la función desde otra celda,\n",
         "# si ya ejecutamos la celda de la función.\n",
         "costo_lote_2 = calcular_costo_lote(cantidad_materia_prima=400, precio_por_unidad=6)\n",
         "print(f\"El costo del lote 2 es de ${costo_lote_2}.\")"
@@ -514,6 +551,53 @@
       "metadata": {
         "id": "JGvyDysQEadp"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### random - en manos del azar\n",
+        "\n",
+        "**Concepto**: Esta librería ofrece funciones para la gneraciónde números pseudoaleatorios.\n",
+        "\n",
+        "\n",
+        "*Recomendación* - ejecuten varias veces el código para verificar aleatoridad.\n"
+      ],
+      "metadata": {
+        "id": "OIuJ_A18kC0A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Usamos la libreria random para generar números aleatorios\n",
+        "import random\n",
+        "\n",
+        "# Genera un número aleatorio entre 1 y 10\n",
+        "numero_aleatorio = random.randint(1, 10)\n",
+        "print(numero_aleatorio)\n",
+        "\n",
+        "# Escogemos una posición aleatoria de la lista\n",
+        "componentes = [\"Surfactantes\", \"Pigmentos\", \"Antiespumante\", \"Fragancia\"]\n",
+        "print(random.choice(componentes))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AP9KfNN2kCNn",
+        "outputId": "483bb82f-b569-46f4-9c5e-350a47ac995d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "Fragancia\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1041,6 +1125,417 @@
       "source": [],
       "metadata": {
         "id": "e6zvPoRqFQRR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ejercicios de práctica"
+      ],
+      "metadata": {
+        "id": "kJ_gBrk0r-o3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Variables y Listas\n"
+      ],
+      "metadata": {
+        "id": "7QtxwoK8sEnN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Inventario de Productos\n",
+        "Crea una variable llamada `nombre_producto` con el nombre de un suero facial y una variable `stock` con el número de unidades disponibles.  \n",
+        "\n",
+        "Luego, imprime una frase que diga:  \n",
+        "**\"El stock de [nombre_producto] es de [stock] unidades.\"**\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "zzKdc7SZs2O4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ImFh2ifBs22r"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Fórmula Química\n",
+        "Crea una lista llamada `ingredientes_activos` que contenga al menos 4 ingredientes de un producto cosmético.  \n",
+        "\n",
+        "Imprime el segundo ingrediente de la lista y el número total de ingredientes.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "XjNPH_1_syYf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Gvd5HSvtsC8h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Condicionales (if/else)"
+      ],
+      "metadata": {
+        "id": "ntuPkPxis3-M"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Control de Calidad\n",
+        "Crea una variable `nivel_ph` con un valor numérico.  \n",
+        "\n",
+        "Escribe un código que imprima **\"pH Aprobado\"** si el valor está entre 5.0 y 6.0 (inclusive), y **\"pH Rechazado\"** si no lo está.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "SZcPuwI7s-Si"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HDa_UG2as_DF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Clasificación de Lotes\n",
+        "Crea una variable `lote_defecto` y asígnale **True** o **False**.  \n",
+        "\n",
+        "Escribe una condición que imprima:  \n",
+        "- **\"Lote requiere re-proceso\"** si `lote_defecto` es True  \n",
+        "- **\"Lote aprobado\"** si es False  \n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "h93BhtUzs_WO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ciclos"
+      ],
+      "metadata": {
+        "id": "OBqZnWYXtDAQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Simulación de Producción\n",
+        "Usa un ciclo `for` y un ciclo `while` para simular la producción de 5 lotes.  \n",
+        "\n",
+        "En cada iteración, imprime el número de lote, por ejemplo:  \n",
+        "**\"Procesando lote #1\"**, **\"Procesando lote #2\"**, etc.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "BCPVD7KAtHnP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lCQeuINKtNDY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Análisis de Temperaturas\n",
+        "Dada la lista `temperaturas = [22, 25, 21, 28, 26]`, usa un ciclo `for` para recorrerla e imprimir:  \n",
+        "- **\"Temperatura óptima\"** si la temperatura es mayor o igual a 25  \n",
+        "- **\"Temperatura baja\"** si es menor  \n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "_I41tBQctNaC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AHF_758XtP-i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Funciones"
+      ],
+      "metadata": {
+        "id": "td-psbdRtQUO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejercicio: Calculadora de Producción\n",
+        "Crea una función llamada `calcular_produccion_semanal` que tome dos argumentos:  \n",
+        "- `lotes_diarios`  \n",
+        "- `unidades_por_lote`  \n",
+        "\n",
+        "La función debe calcular y retornar la producción total en una semana (asumiendo **5 días hábiles**).  \n",
+        "\n",
+        "Llama a la función con valores de ejemplo, como **10 lotes diarios** y **500 unidades por lote**, e imprime el resultado.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "3rzZGsWrthRG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QURMDN1XtjAV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ejercicio: Clasificador de Ingredientes\n",
+        "Crea una función llamada `clasificar_ingrediente` que tome el nombre de un ingrediente como argumento.  \n",
+        "\n",
+        "Dentro de la función, usa un condicional (**if/else**) para retornar:  \n",
+        "- **\"Ingrediente Principal\"** si el nombre es `\"Ácido hialurónico\"` o `\"Vitamina C\"`  \n",
+        "- **\"Ingrediente Secundario\"** en cualquier otro caso  \n",
+        "\n",
+        "Llama a la función con ambos tipos de ingredientes y muestra los resultados.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "p_poz5uStjdH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yZA01AfBttB7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Librerías"
+      ],
+      "metadata": {
+        "id": "GfU8CeiPtwnc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## NumPy"
+      ],
+      "metadata": {
+        "id": "eoLPmkbnt1e8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Costo de Ingredientes\n",
+        "Crea un `np.array` llamado `costo_por_gramo` con los costos de tres ingredientes y otro `np.array` llamado `cantidad_en_g` con las cantidades de cada uno.  \n",
+        "\n",
+        "Multiplica ambos arrays para obtener el costo total de cada ingrediente e imprime el resultado.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "4m4o6edut4Lq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ISZfnkNJt5g4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Conversión de Unidades\n",
+        "Dado el array `unidades_ml = np.array([100, 250, 500])`, usa una operación con NumPy para convertir todas las unidades a litros e imprime el nuevo array.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "iRx5HLazt5zf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zj-sGtCKt8Gk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Pandas"
+      ],
+      "metadata": {
+        "id": "GNfX9kZYt8fR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Creación de DataFrame\n",
+        "Crea un diccionario con datos de al menos 3 productos cosméticos (nombre, precio y volumen en ml).  \n",
+        "\n",
+        "Convierte este diccionario en un DataFrame de Pandas y muéstralo.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "waHOlHggt_r8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ffRsHp3guBJb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "ntfvdvGiuBcm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Análisis de Datos\n",
+        "Usando el DataFrame del ejercicio anterior, agrega una nueva columna llamada `precio_por_ml` que calcule el precio de cada producto por mililitro.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "dhv72VpkuC2P"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7La3OG6iuDi9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Matplotlib"
+      ],
+      "metadata": {
+        "id": "nrvYou9ouD6f"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Gráfico de Ventas\n",
+        "Crea dos listas:  \n",
+        "- Una para los meses (ej. `[\"Ene\", \"Feb\", \"Mar\"]`)  \n",
+        "- Otra para las ventas de un producto en esos meses.  \n",
+        "\n",
+        "Usa `plt.plot()` para generar un gráfico de líneas que muestre la evolución de las ventas a lo largo del tiempo.\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "7lWh8-4tuFX7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "q3qD48ICuGy-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Ejercicio: Gráfico de Barras\n",
+        "Usando los datos de ventas de diferentes productos:  \n",
+        "\n",
+        "```python\n",
+        "productos = ['Suero', 'Crema', 'Mascarilla']  \n",
+        "unidades_vendidas = [500, 800, 600]"
+      ],
+      "metadata": {
+        "id": "gw62ZZXHuHDj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oj2rgmhsuLMP"
       },
       "execution_count": null,
       "outputs": []
