Agregado Eq. Lienales, No Lineales y Optimización

--- a/Semana02_SimulacionEstaticaDinamica.ipynb
+++ b/Semana02_SimulacionEstaticaDinamica.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzUDl45YaBXB/DbbtvEmDo",
+      "authorship_tag": "ABX9TyOySnW1piWIzSpTU/g+rhPZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,6 +217,186 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Optimziacióm extensiones a Problemas No Lineales con SciPy - Optimización\n",
+        "**Propósito**: Introducir el concepto de que la mayoría de los modelos reales (como los de equilibrio químico o termodinámico) son no lineales, y presentar la herramienta para resolverlos.\n",
+        "\n",
+        "**Librería nueva**: SciPy\n",
+        "\n",
+        "**Funciones clave**: optimize.root() y optimize.minimize()"
+      ],
+      "metadata": {
+        "id": "aWRtTLEF_phM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### optimize.root()\n",
+        "\n",
+        "**Caso de uso:** Si conocemos la derivada analìtica de nuestra función, este método es más rápido y preciso."
+      ],
+      "metadata": {
+        "id": "RxgjrQdbHbNm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.optimize import root\n",
+        "\n",
+        "\n",
+        "# 1. Definamos la función a la cual hallaremos la raiz\n",
+        "def deriv_tiempo_proceso(W): # Potencia de proceso (W)\n",
+        "  # 1.1 Declaramos parámetros Q y W_0\n",
+        "  Q = 1000 # kW, Calor de proceso\n",
+        "  W_0 = 400 # kW, Parámtero de eficiencia\n",
+        "\n",
+        "  termino1 = 1 / (2.0*(W_0**1.5)*(W**0.5))\n",
+        "  termino2 = 1 / W**2\n",
+        "  dt_dW = Q*(termino1 - termino2)\n",
+        "\n",
+        "  return dt_dW\n",
+        "\n",
+        "# 2. Preparar optimziación\n",
+        "# scipy.optimize.root() requiere de un valor inicial para hallar la raíz\n",
+        "W_inicial = 300 # kW\n",
+        "\n",
+        "# 3. Lanzamos optimización\n",
+        "resultado = root(\n",
+        "    deriv_tiempo_proceso, # Función a la cual hallaremos la raìz\n",
+        "    W_inicial,      # Valor inicial de variable respuesta\n",
+        ")\n",
+        "\n",
+        "# 4. Presentamos resultados de optimziación\n",
+        "W_opt = resultado.x[0] # Esto es una lista y el primer elemento es la vble repsuesta\n",
+        "# ¡Extra! Calculamos el tiempo óptimo con la potencia óptima\n",
+        "t_opt = (Q/W_opt) * (1 + (W_opt/W_0)**1.5)\n",
+        "\n",
+        "print(\"--- Resultado de la Optimización de Potencia ---\")\n",
+        "print(f\"Estado de la Optimización: {'Éxito' if resultado.success else 'Fallo'}\")\n",
+        "print(\"-\" * 40)\n",
+        "print(f\"Potencia óptima: {W_opt} kW\")\n",
+        "print(f\"Tiempo de Proceso Óptimo: {t_opt:.2f} h\")\n",
+        "print(\"-\" * 40)\n",
+        "print(\"¡Hemos encontrado la potencia que minimiza el tiempo de proceso\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h0pX7KIoAIY7",
+        "outputId": "6aa617c8-faab-4df9-e2f9-75186e6ef344"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Resultado de la Optimización de Potencia ---\n",
+            "Estado de la Optimización: Éxito\n",
+            "----------------------------------------\n",
+            "Potencia óptima: 634.9604207872798 kW\n",
+            "Tiempo de Proceso Óptimo: 4.72 h\n",
+            "----------------------------------------\n",
+            "¡Hemos encontrado la potencia que minimiza el tiempo de proceso\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### optimize.minimize()\n",
+        "\n",
+        "**Caso de uso:** cuando la derivada analítica es desconocida o difícil de conocer podemos usar el solver de Scipy minimize() para calcularla."
+      ],
+      "metadata": {
+        "id": "ovInFVT9IBSk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.optimize import minimize\n",
+        "import numpy as np\n",
+        "import matplotlib. pyplot as plt\n",
+        "\n",
+        "# 1. Definimos la función a minimizar\n",
+        "def tiempo_proceso(W): # Potencia de proceso W\n",
+        "  # 1.1 Declaramos Q y W_0\n",
+        "  Q = 1000 # kW, Calor de proceso\n",
+        "  W_0 = 400 # kW, Parámtero de eficiencia\n",
+        "  termino_raiz = (W/W_0)**1.5\n",
+        "  t = (Q/W)*(1 + termino_raiz)\n",
+        "\n",
+        "  return t\n",
+        "\n",
+        "# 2. Preparar optimziación\n",
+        "# scipy.optimize.root() requiere de un valor inicial para hallar la raíz\n",
+        "W_inicial = 300 # kW\n",
+        "\n",
+        "# Definimos límites para la variable repsuesta W, la cual no puede ser 0.0\n",
+        "limites = [(0.1, None)] # W >= 0.1\n",
+        "\n",
+        "\n",
+        "# 3. Lanzamos optimización\n",
+        "resultado = minimize(\n",
+        "    tiempo_proceso, # Función a la cual hallaremos la raìz\n",
+        "    W_inicial,      # Valor inicial de variable respuesta\n",
+        "    bounds=limites  # Limites para la variable de respuesta\n",
+        ")\n",
+        "\n",
+        "# 4. Presentamos resultados de optimziación\n",
+        "W_opt = resultado.x[0] # Esto es una lista y el primer elemento es la vble repsuesta\n",
+        "# ¡Extra! Calculamos el tiempo óptimo con la potencia óptima\n",
+        "t_opt = tiempo_proceso(W_opt)\n",
+        "\n",
+        "print(\"--- Resultado de la Optimización de Potencia ---\")\n",
+        "print(f\"Estado de la Optimización: {'Éxito' if resultado.success else 'Fallo'}\")\n",
+        "print(\"-\" * 40)\n",
+        "print(f\"Potencia óptima: {W_opt} kW\")\n",
+        "print(f\"Tiempo de Proceso Óptimo: {t_opt:.2f} h\")\n",
+        "print(\"-\" * 40)\n",
+        "print(\"¡Hemos encontrado la potencia que minimiza el tiempo de proceso\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4YqDTlWoBj99",
+        "outputId": "8d31c3f1-9a01-4916-f3fe-9359e116a8c9"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Resultado de la Optimización de Potencia ---\n",
+            "Estado de la Optimización: Éxito\n",
+            "----------------------------------------\n",
+            "Potencia óptima: 633.7276909811951 kW\n",
+            "Tiempo de Proceso Óptimo: 4.72 h\n",
+            "----------------------------------------\n",
+            "¡Hemos encontrado la potencia que minimiza el tiempo de proceso\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "6rrS5H559tGd"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
