Actualizar Celdas de Texto

--- a/Semana02_SimulacionEstatica.ipynb
+++ b/Semana02_SimulacionEstatica.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaxIfmUNXfRK/xnqmiSCcJ",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNkHeb/X7h9sCbjP7mnL5XW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +49,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Solución \"Desde Cero\" (Sustitución Secuencial - Teórico)\n",
+        "## Solución \"Desde Cero\" (Sustitución Secuencial - Teórico, ilustrativo)\n",
         "**Propósito**: Mostrar la lógica iterativa del método. No lo vamos a ejecutar a la perfección, sino a ilustrar su naturaleza iterativa.\n",
         "\n",
         "**Método**: Usar un bucle for (que ya conocen) para simular las iteraciones."
@@ -777,12 +778,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from scipy.optimize import minimize\n",
+        "\n",
+        "# Función: costo de operación de un reactor (en función de la temperatura)\n",
+        "def costo(T):\n",
+        "    return (T - 70)**2 + 10\n",
+        "\n",
+        "# Temperatura inicial (°C)\n",
+        "T_inicial = 50\n",
+        "\n",
+        "# SciPy busca la temperatura óptima que minimiza el costo\n",
+        "resultado = minimize(costo, T_inicial)\n",
+        "\n",
+        "print(f\"Temperatura óptima: {resultado.x[0]:.2f} °C\")\n",
+        "print(f\"Costo mínimo: {resultado.fun:.2f}\")\n"
+      ],
       "metadata": {
-        "id": "5xN8G-2lpoDB"
+        "id": "5xN8G-2lpoDB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9076f5ac-a4a3-4e98-cc7b-0be3434b84a6"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Temperatura óptima: 70.00 °C\n",
+            "Costo mínimo: 10.00\n"
+          ]
+        }
+      ]
     }
   ]
 }
