Agregar Ejercicios Prácticos

--- a/Semana03_SimluacionDinamica.ipynb
+++ b/Semana03_SimluacionDinamica.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVL2oPFodNF2b3eF1GDlbH",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPAu2AwMts86pA7f0DryWCw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -399,6 +400,166 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Ejercicios de Práctica"
+      ],
+      "metadata": {
+        "id": "KnQARW2Pzh30"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Ejercicio 1: EDO de Primer Orden (Transitorio de Tanque)**\n",
+        "\n",
+        "### **Escenario: Dilución en la Producción de _Shampoo_**\n",
+        "\n",
+        "Un tanque agitado continuo (CSTR) de $V = 10 \\, L$ contiene inicialmente $C_0 = 5 \\, g/L$ de un tensioactivo concentrado.  \n",
+        "Para iniciar la producción de _shampoo_, se abre una línea de agua purificada con un flujo de $F_{in} = 2 \\, L/min$ y concentración $C_{in} = 0 \\, g/L$.  \n",
+        "El flujo de salida es igual al de entrada ($F_{out} = 2 \\, L/min$), manteniendo el volumen constante.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Objetivo**\n",
+        "Determinar la concentración del tensioactivo en el tanque a lo largo del tiempo, y cuánto tarda en reducirse a un **1 % de su concentración inicial**.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Ecuación del Modelo (Balance de Masa):**\n",
+        "\n",
+        "$dC/dt = (F_{in}/V) \\, (C_{in} - C)$\n",
+        "---\n",
+        "\n",
+        "### **Datos:**\n",
+        "\n",
+        "- $V = 10 \\, L$  \n",
+        "- $F_{in} = 2 \\, L/min$  \n",
+        "- $C_{in} = 0 \\, g/L$  \n",
+        "- **Condición Inicial:** $C(t=0) = 5 \\, g/L$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Tarea del Estudiante:**\n",
+        "\n",
+        "1. Definir la función **EDO de primer orden** en Python.  \n",
+        "2. Utilizar **`scipy.integrate.odeint`** para simular el perfil de concentración por **30 minutos**.  \n",
+        "3. Determinar el tiempo exacto en que la concentración del tensioactivo es de  \n",
+        "   $C = 0.05 \\, g/L$ (el **1 %** de $5 \\, g/L$).\n"
+      ],
+      "metadata": {
+        "id": "oIte3MUNzlzC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Ejercicio 2: Sistema de EDOs Acopladas (Dos Variables)**\n",
+        "\n",
+        "### **Escenario: Curado Térmico y Degradación de una Emulsión**\n",
+        "\n",
+        "En un horno de curado, una emulsión debe calentarse a una temperatura objetivo ($T_{obj}$) para estabilizarse, pero un calentamiento excesivo provoca la degradación de un conservante clave ($C_P$).\n",
+        "\n",
+        "El proceso está modelado por dos EDOs acopladas:\n",
+        "\n",
+        "1. **Balance de Energía ($T$):**  \n",
+        "   La temperatura del producto ($T$) aumenta debido al horno (con $T_{horno}$) y disminuye por las pérdidas.\n",
+        "\n",
+        "2. **Balance de Masa ($C_P$):**  \n",
+        "   La tasa de degradación del conservante ($\\frac{dC_P}{dt}$) es fuertemente dependiente de $T$ (por una cinética de orden cero).\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Ecuaciones del Modelo:**\n",
+        "\n",
+        "1.  \n",
+        "$$\n",
+        "\\frac{dT}{dt} = 0.5 (T_{horno} - T)\n",
+        "$$\n",
+        "\n",
+        "2.  \n",
+        "$$\n",
+        "\\frac{dC_P}{dt} = -\\big(0.01 \\cdot e^{0.1(T - 300)}\\big) \\cdot C_P\n",
+        "\\qquad \\text{(Degradación térmica)}\n",
+        "$$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Datos Iniciales y Parámetros:**\n",
+        "\n",
+        "- **Temperatura del Horno:** $T_{horno} = 350 \\, K$\n",
+        "- **Condiciones Iniciales:**  \n",
+        "  $T(t = 0) = 295 \\, K$  \n",
+        "  $C_P(t = 0) = 10 \\, g/L$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### **Tarea del Estudiante:**\n",
+        "\n",
+        "1. Definir la función de Python que devuelva un *array* de dos derivadas:  \n",
+        "   $[ \\frac{dT}{dt}, \\frac{dC_P}{dt} ]$\n",
+        "2. Simular el sistema durante **10 minutos**.  \n",
+        "3. Identificar la **temperatura máxima** alcanzada por el producto y la **concentración final del conservante**.  \n",
+        "   ¿Se logra la estabilidad a expensas de la degradación?\n"
+      ],
+      "metadata": {
+        "id": "_3pKlVAe0Y87"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 🧪 Ejercicio 3: Sistema DAE (Sistema de Control de Presión)\n",
+        "\n",
+        "## Escenario: Llenado de Aerosol con Restricción de Ecuación de Estado\n",
+        "\n",
+        "Un tanque se está llenando con un propulsor de aerosol (un gas licuado, **M**) para un producto envasado a presión.  \n",
+        "La **masa** de propulsor en el tanque (**M**) es la variable diferencial, y la **presión** (**P**) está ligada a la masa por una ecuación de estado instantánea (algebraica).\n",
+        "\n",
+        "1. **Balance de Masa (EDO):**  \n",
+        "   La masa del propulsor aumenta con un flujo de entrada constante.\n",
+        "\n",
+        "   $$\n",
+        "   \\frac{dM}{dt} = F_{in} \\quad \\text{(EDO)}\n",
+        "   $$\n",
+        "\n",
+        "2. **Ecuación de Estado (Algebraica):**  \n",
+        "   La presión está relacionada con la densidad, que a su vez se relaciona con la masa y el volumen (**V** constante).  \n",
+        "   Usaremos una Ecuación de Estado simplificada:\n",
+        "\n",
+        "   $$\n",
+        "   P = P_0 + k_{densidad} \\cdot \\left( \\frac{M}{V} \\right) \\quad \\text{(Algebraica)}\n",
+        "   $$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🎯 Objetivo\n",
+        "Simular cómo la presión aumenta en el tiempo.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 📘 Datos\n",
+        "\n",
+        "- **Flujo de llenado:** $F_{in} = 0.5 \\text{ kg/s}$\n",
+        "- **Volumen del Tanque:** $V = 1 \\text{ m}^3$\n",
+        "- **Presión Base (Vacío):** $P_0 = 100 \\text{ kPa}$\n",
+        "- **Constante de Densidad:** $k_{densidad} = 500 \\text{ kPa·m}^3/\\text{kg}$\n",
+        "- **Condición Inicial:** $M(t=0) = 0 \\text{ kg}$\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## 🧩 Tarea del Estudiante\n",
+        "\n",
+        "1. Aplicar la **sustitución** para obtener una EDO final en términos de **M** y **t**.  \n",
+        "2. Utilizar `scipy.integrate.odeint` para resolver la EDO durante **30 segundos**.  \n",
+        "3. Graficar la **presión P** del tanque en función del tiempo.  \n",
+        "   ¿Es un aumento lineal o no lineal?\n"
+      ],
+      "metadata": {
+        "id": "dYsUZK7N0sze"
+      }
     }
   ]
 }
