--- a/Semana05_ModelosEmpiricos.ipynb
+++ b/Semana05_ModelosEmpiricos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1IaqzRU58plA5byJPdGBGGjdc6pOPMo5V",
-      "authorship_tag": "ABX9TyNDNTI0SYHyqDBXamsWW0Oh",
+      "authorship_tag": "ABX9TyPoMjxsLAs5Xdo5EUojve66",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -125,7 +125,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 801
+          "height": 858
         },
         "id": "fRh_QRUjKm7j",
         "outputId": "dc2aba21-2812-432f-c075-6cc7f6792671"
@@ -180,7 +180,7 @@
         "    R2 = r2_score(Y_real, Y_pred)\n",
         "    RMSE = np.sqrt(mean_squared_error(Y_real, Y_pred))\n",
         "    MAE = mean_absolute_error(Y_real, Y_pred)\n",
-        "    MAPE = MAPE = mean_absolute_percentage_error(Y_real, Y_pred)\n",
+        "    MAPE = mean_absolute_percentage_error(Y_real, Y_pred)\n",
         "    return R2, RMSE, MAE, MAPE\n",
         "\n",
         "# =============================================================================\n",
